Fixed layout issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 100vh;
-  width: 100vw;
+  max-width: 100vw;
 }
 
 @font-face {
